--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,7 +9,7 @@
   }
   
   .Content {
-    background-color: #ffffff;
+    background-color: #A7C7E7;
     padding: 10px;
     border-radius: 2px;
     border: 1px solid #dadadf;
