--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -1,5 +1,5 @@
 .Post {
-    background-color: #ffffff;
+    background-color: #A7C7E7;
     border: 1px solid #dadadf;
     border-radius: 2px;
     margin-bottom: 16px;
