--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,25 +1,23 @@
 .App {
-    font-family: "DM Sans", sans-serif;
-    background-color: #f8f8f8;
+    font-family: "Teko", sans-serif;
+    font-weight: 300;
+    font-size: 25px;
+    background: whitesmoke;
     min-height: 100vh;
   }
   
   .Main {
-    padding-top: 81px;
+    padding-top: 150px;
   }
   
   .Content {
-    background-color: #A7C7E7;
+    background-color: white;
     padding: 10px;
-    border-radius: 2px;
-    border: 1px solid #dadadf;
+    border-radius: 10px;
+    border: 6px solid white;
+    color: black;
   }
   
-  .FillerImage {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-  }
   
   .Image {
     max-height: 40vh;
@@ -32,7 +30,7 @@
   }
   
   a {
-    color: #555555;
+    color: white;
     transition: color ease-in-out 0.3s;
   }
   
@@ -59,7 +57,7 @@
   i:hover {
     cursor: pointer;
     transition: color ease-in-out 0.3s;
-    color: #2142b2;
+    color: rgb(8, 119, 237);
   }
   
   figure {
