--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -1,7 +1,7 @@
 .Post {
-    background-color: #A7C7E7;
-    border: 1px solid #dadadf;
-    border-radius: 2px;
+    background-color: white;
+    border: 6px solid white;
+    border-radius: 10px;
     margin-bottom: 16px;
     text-align: center;
   }
