--- a/src/styles/PostsPage.module.css
+++ b/src/styles/PostsPage.module.css
@@ -1,7 +1,8 @@
 .SearchBar input {
-    border-radius: 20px;
+    
     color: #242a3d;
     padding-left: 40px;
+    margin-top: 50px;
     margin-bottom: 16px;
   }
   
@@ -14,5 +15,5 @@
   
   .SearchIcon:hover {
     cursor: default;
-    color: #cfced3;
+    color: white
   }
