--- a/src/styles/SignInUpForm.module.css
+++ b/src/styles/SignInUpForm.module.css
@@ -1,46 +1,39 @@
-.Row {
-    height: calc(100vh - 81px);
-  }
-  .Input {
-    background: #ffffff;
-    border: 1px solid #f0f1f9;
-    box-sizing: border-box;
-    border-radius: 2px;
-    color: #7177a1;
-    text-align: center;
-    padding: 10px;
-  }
-  
-  .Header {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    letter-spacing: 0.2em;
-    text-transform: uppercase;
-    color: #2142b2;
-  }
-  
-  .Link {
-    text-decoration: none;
-    text-align: center;
-    display: block;
-    margin: auto;
-  }
-  
-  .Link span {
-    color: #ff9254;
-  }
-  
-  .Container {
-    padding: 30px 10px;
-  }
-  
-  .SignInCol {
-    height: 320px;
-  }
-  
-  .SignUpCol {
-    height: 375px;
-  }
+
+.Input {
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+  font-size: 100%;
+  color: black;
+}
+
+.Header {
+  font-weight: 500;
+  font-size: 140%;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  line-height: 25px;
+  text-transform: uppercase;
+  color: black;
+  padding-bottom: 20px;
+}
+
+.a {
+  color: rgb(0, 60, 150);
+}
+
+.Link {
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  margin: auto;
+}
+
+.Container {
+  background: rgb(0, 60, 150);
+  padding: 10px;
+  border-radius: 15px;
+  border: 1px solid #f8f8f8;
+  margin-bottom: 50px;
+}
