--- a/src/styles/PostsPage.module.css
+++ b/src/styles/PostsPage.module.css
@@ -1,19 +1,13 @@
 .SearchBar input {
-    
+    text-align: center;
     color: #242a3d;
     padding-left: 40px;
     margin-top: 50px;
     margin-bottom: 16px;
   }
   
-  .SearchIcon {
-    position: absolute;
-    font-size: 1.2rem;
-    padding: 9px;
-    padding-left: 15px;
-  }
   
   .SearchIcon:hover {
     cursor: default;
-    color: white
+    color: #cfced3;
   }
