--- a/src/styles/ContactUsForm.module.css
+++ b/src/styles/ContactUsForm.module.css
@@ -1,6 +1,7 @@
 .Row {
     justify-content: center;
     padding-top: 5px;
+    font-family: 'Teko';
 }
 
 
@@ -9,6 +10,7 @@
     justify-content: center;
     padding-top: 10px;
     font-size: 140%;
+    
 }
 
 .ContactContainer {
